
* Build and release process:
  - The Java2HTML pages are now uploaded in a TAR GZ file.

* Generated build file:
  - Improved the create-api and create-function targets.
  - The create-api target invokes the create-function target as APIs must have
    at least one function.

* Build and release process:
  - Added the target "tests-ui" to run the unit tests in a graphical
    environment.

* Libraries:
  - Updated xmlenc from 0.45 to 0.47, which should result in a performance
    improvement.
    Typical impact on performance: Small.

* Documentation:
  - Added chapter about the integration of XINS in NetBeans 4.0.

* Examples:
  - Fixed TestMyFunction example.
  - The build.xml is to compile and run the examples, an appart script file
    nbbuild.xml has been created for using XINS with NetBeans 4.0.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 8:

* Logdoc:
  - The missing accesslevel variable problem has been fixed. This bug has been
    in XINS since version 1.1.0 alpha 6.

* XINS/Java Common Library:
  - Added tests for class PropertyReaderUtils.
  - Added toString class function in PropertyReaderUtils.
  - Added class CollectionUtils with one class function called "list". This
    function converts an Iterator to an ArrayList.
  - Improved tests for class HTTPServiceCaller.
  - Set the unused values to null in the HTTPServiceCaller after poping the
    diagnotisc context identifier.
  - Dispose the variables of the CallExecutor after getting the HTTP result.

* XINS/Java Server Framework:
  - Changed some classes to use the Common log messages for programming
    errors.
  - Moved some common functionality from the CallingConvention subclasses up
    to class CallingConvention self. The calling conventions now behave the
    same with regard to the determination of the function name. If the
    function name is specified both in the paramter "_function" and in the