@@ -28,6 +28,7 @@ CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 9:
 * Build and release process:
   - Added the target "tests-ui" to run the unit tests in a graphical
     environment.
+  - Fixed: The XINS protocol documentation was not included in the release.
 
 * Libraries:
   - Updated xmlenc from 0.45 to 0.47, which should result in a performance
